--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -14,7 +14,7 @@
       <span>
         <img
           class="rounded-full w-8 h-8"
-          src="https://images.unsplash.com/photo-1542909168-82c3e7fdca5c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=128&q=80"
+          src="https://avatars.githubusercontent.com/u/118637614?v=4"
           alt=""
         />
       </span>
